Linked index.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
   
     <title>beescholar.buzz</title>
+    <link rel="stylesheet" type="text/css" href="resources/css/index.css">
   
   </head>
 
